--- a/h5p-editor-font-kidsloop.css
+++ b/h5p-editor-font-kidsloop.css
@@ -2,6 +2,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
+.Zebra_DatePicker {
+  font-family: 'Roboto', sans-serif;
+}
+
 .h5peditor button,
 .h5peditor input,
 .h5peditor select {
