--- a/h5p-editor-font-kidsloop.css
+++ b/h5p-editor-font-kidsloop.css
@@ -33,3 +33,7 @@
 .h5peditor .h5p-editor-flex-wrapper {
   height: 1.5em;
 }
+
+.h5peditor-field-description, .h5p-help-text {
+  font-weight: normal;
+}
